packages/components/bolt-form/src/form.scss
/* ... */
.c-bolt-inline-label {
  @include bolt-font-size(small);

  display: inline-block;
  position: relative;
  padding-left: 1.5em;
  color: bolt-theme(text);
  cursor: pointer;
  user-select: none;

  &:before,
  &:after {
    position: absolute;
    transition: all $bolt-inline-label-transition;
  }

  &:before {
    content: '';
    top: 0.2em;
    left: 0;
    width: 1em;
    height: 1em;
    border-width: $bolt-inline-label-input-border-width;
    border-style: $bolt-inline-label-input-border-style;
    border-color: $bolt-inline-label-input-border-color;
    background-color: $bolt-input-background-color;
  }

  &:after {
    content: '';
    opacity: bolt-opacity(0);
    transform-origin: center;
  }
}

.c-bolt-inline-label--checkbox {
  &:before {
    border-radius: 2px;
  }

  &:after {
    top: 0.3em;
    left: 0.375em;
    transform: rotate(45deg) scale(0.1);
    width: calc(1em - 0.675em);
    height: calc(1em - 0.325em);
    border-width: 0 2px 2px 0;
    border-style: solid;
    border-color: $bolt-inline-label-input-color;
  }
}

.c-bolt-inline-label--radio {
  &:before,
  &:after {
    border-radius: 1em;
  }

  &:after {
    top: calc(0.2em + 3px);
    left: 3px;
    transform: scale(0.1);
    width: calc(1em - 6px);
    height: calc(1em - 6px);
    background-color: $bolt-inline-label-input-color;
  }
}

.c-bolt-input--checkbox,
.c-bolt-input--radio {
  &:focus ~ .c-bolt-inline-label,
  &:hover ~ .c-bolt-inline-label {
    &:before {
      @include bolt-shadow(
        $key: $bolt-input-shadow-level,
        $base-color: $bolt-input-box-shadow
      );
    }
  }

  &:focus ~ .c-bolt-inline-label {
    &:before {
      @include bolt-shadow(
        $key: $bolt-input-shadow-level,
        $base-color: $bolt-input-box-shadow
      );
    }
  }

  &:checked ~ .c-bolt-inline-label {
    &:before {
      border-color: $bolt-input-border-color--focus;
    }

    &:after {
      opacity: bolt-opacity(100);
    }

    .c-bolt-inline-label__emphasize {
      @include bolt-font-weight(semibold);
    }
  }

  &:disabled ~ .c-bolt-inline-label {
    &:before {
      background-color: $bolt-input-background-color--disabled;
    }
  }
}

.c-bolt-input--checkbox {
  &:checked ~ .c-bolt-inline-label {
    &:after {
      transform: rotate(45deg) scale(1);
    }
  }
}

.c-bolt-input--radio {
  &:checked ~ .c-bolt-inline-label {
    &:after {
      transform: scale(1);
    }
  }
}

.c-bolt-input-icons {
  // Icon size and padding should NOT adjust alongside font size because the height of the input
  // is set to match the height of default buttons, which should have a fixed height.
  @include bolt-font-size(small);

  position: absolute;
  top: 1px;
  right: 1px;
  padding-top: calc(0.35 * var(--bolt-spacing-y-medium) / 2);
  padding-right: var(--bolt-spacing-x-small);
  padding-bottom: calc(0.35 * var(--bolt-spacing-y-medium) / 2);
  padding-left: 0;
  color: $bolt-input-icon-color;
  pointer-events: none;
  border-radius: $bolt-input-border-radius;
  background-color: $bolt-input-background-color;

  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: -0.95rem;
    width: 1rem;
    height: 100%;
    background: linear-gradient(
      to left,
      $bolt-input-background-color,
      rgba(255, 255, 255, 0)
    );
  }
}

.c-bolt-input.is-invalid,
.c-bolt-input.is-touched:invalid {
  & ~ .c-bolt-input-icons {
    background-color: $bolt-input-background-color--invalid;

    &:before {
      background: linear-gradient(
        to left,
        $bolt-input-background-color--invalid,
        rgba(255, 255, 255, 0)
      );
    }
  }
}

.c-bolt-input.is-disabled,
.c-bolt-input:disabled {
  & ~ .c-bolt-input-icons {
    background-color: $bolt-input-background-color--disabled;

    &:before {
      background: linear-gradient(
        to left,
        $bolt-input-background-color--disabled,
        rgba(255, 255, 255, 0)
      );
    }
  }
}

.c-bolt-input:focus,
.c-bolt-custom-input.is-active {
  & ~ .c-bolt-input-icons {
    color: $bolt-input-icon-color--active;
    @include bolt-css-vars(
      (
        --bolt-theme-icon: $bolt-input-icon-color--active,
      )
    );
  }
}

.c-bolt-input-icon {
  display: inline-block;
}

.c-bolt-input-icon--link {
  @include bolt-font-family(body);

  padding: 0;
  text-decoration: none;
  cursor: pointer;
  pointer-events: auto;
  border: none;
  background: none;
}

.c-bolt-input-icon--invalid {
  display: none; // The invalid icon will always be present and simply un-hidden when a field becomes invalid
  color: $bolt-input-icon-color--invalid;
  @include bolt-css-vars(
    (
      --bolt-theme-icon: $bolt-input-icon-color--invalid,
    )
  );
}

.c-bolt-input.is-invalid ~ .c-bolt-input-icons,
.c-bolt-input.is-touched:invalid ~ .c-bolt-input-icons {
  .c-bolt-input-icon--invalid {
    display: block;
  }
}

.c-bolt-input.is-disabled ~ .c-bolt-input-icons,
.c-bolt-input:disabled ~ .c-bolt-input-icons {
  background-color: $bolt-input-background-color--disabled;

  &:before {
    background: linear-gradient(
      to left,
      $bolt-input-background-color--disabled,
      rgba(255, 255, 255, 0)
    );
  }
}

.c-bolt-input-icon__text {
  @include bolt-visuallyhidden;
}

// Input validation or helper text
$bolt-input-message-text-color--invalid: bolt-color(
  error
); // TODO: [Mai] This is the theme error color

.c-bolt-input-message {
  @include bolt-font-size(medium);

  padding: var(--bolt-spacing-y-xxsmall) var(--bolt-spacing-x-small);
}

.c-bolt-input-message--invalid {
  @include bolt-font-weight(semibold);
  @include bolt-font-size(xsmall);
  color: $bolt-input-message-text-color--invalid;
}

// Strength Indicator
$bolt-strength-indicator-transition: $bolt-transition;

.c-bolt-strength-indicator {
  display: none;
  padding: calc(var(--bolt-spacing-y-small) / 2) var(--bolt-spacing-x-small);

  .c-bolt-input[type='password']:focus ~ & {
    display: block;
  }
}
/* ... */

